--- a/exercices/exercice_2/package.json
+++ b/exercices/exercice_2/package.json
@@ -6,12 +6,14 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "bower": "bower install"
+    "bower": "bower install",
+    "start": "node server/app.js"
   },
   "dependencies": {
     "express": "4.10.2",
     "body-parser": "1.9.2",
     "socket.io": "1.2.0",
-    "bower": "1.5.3"
+    "bower": "1.5.3",
+    "cors": "2.7.1"
   }
 }
